--- a/xx/xx.Android/Properties/AndroidManifest.xml
+++ b/xx/xx.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="test3.test3" android:installLocation="auto" android:versionCode="1" android:versionName="0.224.0">
-	<uses-sdk android:minSdkVersion="25" android:targetSdkVersion="27" />
+	<uses-sdk android:minSdkVersion="25" android:targetSdkVersion="28" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
@@ -9,5 +9,6 @@
 	<uses-permission android:name="android.permission.INSTALL_PACKAGES" />
 	<uses-permission android:name="android.permission.INSTANT_APP_FOREGROUND_SERVICE" />
 	<uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
+  <uses-permission android:name="android.permission.VIBRATE" />
 	<application android:label="xx.Android" android:icon="@mipmap/icon"></application>
 </manifest>
