--- a/xx/xx.UWP/xx.UWP.csproj
+++ b/xx/xx.UWP/xx.UWP.csproj
@@ -103,6 +103,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scanner\ScannerInit.cs" />
+    <Compile Include="Scanner\WriteProfile.cs" />
     <Compile Include="Utils\GetDeviceSerial.cs" />
     <Compile Include="Utils\GetIP.cs" />
     <Compile Include="Utils\WriteProfile.cs" />
@@ -159,7 +160,7 @@
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.3</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="4.4.0.991640" />
+    <PackageReference Include="Xamarin.Forms" Version="4.7.0.1351" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\HoneywellDecoderSettingsV2.exm" />
@@ -170,8 +171,13 @@
       <HintPath>Assets\HonCommands.dll</HintPath>
     </Reference>
     <Reference Include="xx.Helper">
-      <HintPath>..\..\xx.Helper\bin\Release\xx.Helper.dll</HintPath>
+      <HintPath>..\xx.Helper\bin\Release\xx.Helper.dll</HintPath>
     </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <SDKReference Include="WindowsMobile, Version=10.0.15063.0">
+      <Name>Windows Mobile Extensions for the UWP</Name>
+    </SDKReference>
   </ItemGroup>
   <Import Project="..\xx\xx.projitems" Label="Shared" />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
