--- a/xx/xx.Helper/packages.config
+++ b/xx/xx.Helper/packages.config
@@ -1,4 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="portable46-net451+win81" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="portable45-net45+wp8" requireReinstallation="true" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="portable45-net45+wp8" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="portable45-net45+wp8" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="portable45-net45+wp8" requireReinstallation="true" />
+  <package id="p3-sharpcompress" version="0.10.5.2" targetFramework="portable46-net451+win81" />
 </packages>
